tests/fixtures/invalid/type_errors/return_type_mismatch.luma
-- Return type mismatch
let getName = fn(): String do
    return 42
end

getName()
